hyperRule/src/main/java/bgdt/hyperBase/HyperRuleParser.java
// Generated from HyperRule.g4 by ANTLR 4.7

package bgdt.hyperBase;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HyperRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_LITERAL=1, FLOAT_LITERAL=2, STRING_LITERAL=3, BOOLEAN_LITERAL=4, NULL_LITERAL=5, 
		SUM=6, AVG=7, SQRT=8, LOG=9, COUNT=10, LEN=11, MAX=12, MIN=13, SUBSTR=14, 
		TRIM=15, IS_NUMBER=16, IS_INT=17, IS_NULL=18, TO_STR=19, TO_INT=20, TO_FLOAT=21, 
		TO_DATE=22, ADD_TO_DATE=23, DATE_DIFF=24, SYSDATE=25, IF=26, ELIF=27, 
		ELSE=28, LOCAL_VAR=29, REF_VAR=30, ADD=31, SUB=32, MUL=33, DIV=34, FLOOR_DIV=35, 
		MOD=36, POW=37, ASSIGN=38, NOT=39, AND=40, OR=41, EQ=42, NE=43, GT=44, 
		LT=45, GE=46, LE=47, LPAREN=48, RPAREN=49, LBRACE=50, RBRACE=51, SEMI=52, 
		COMMA=53, BLOCK_COMMENT=54, WS=55, LINE_COMMENT=56;
	public static final int
		RULE_statements = 0, RULE_statements_block = 1, RULE_statement = 2, RULE_assign_statement = 3, 
		RULE_if_statement = 4, RULE_condition = 5, RULE_condition_branch = 6, 
		RULE_expression = 7, RULE_paralist = 8, RULE_para = 9;
	public static final String[] ruleNames = {
		"statements", "statements_block", "statement", "assign_statement", "if_statement", 
		"condition", "condition_branch", "expression", "paralist", "para"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'null'", "'sum'", "'avg'", "'sqrt'", "'log'", 
		"'count'", "'len'", "'max'", "'min'", "'substr'", "'trim'", "'is_number'", 
		"'is_int'", "'is_null'", "'to_str'", "'to_int'", "'to_float'", "'to_date'", 
		"'add_to_date'", "'date_diff'", "'sysdate'", "'if'", "'elif'", "'else'", 
		null, null, "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'**'", "'='", 
		"'!'", "'&&'", "'||'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'('", 
		"')'", "'{'", "'}'", "';'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
		"NULL_LITERAL", "SUM", "AVG", "SQRT", "LOG", "COUNT", "LEN", "MAX", "MIN", 
		"SUBSTR", "TRIM", "IS_NUMBER", "IS_INT", "IS_NULL", "TO_STR", "TO_INT", 
		"TO_FLOAT", "TO_DATE", "ADD_TO_DATE", "DATE_DIFF", "SYSDATE", "IF", "ELIF", 
		"ELSE", "LOCAL_VAR", "REF_VAR", "ADD", "SUB", "MUL", "DIV", "FLOOR_DIV", 
		"MOD", "POW", "ASSIGN", "NOT", "AND", "OR", "EQ", "NE", "GT", "LT", "GE", 
		"LE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", "BLOCK_COMMENT", 
		"WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HyperRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HyperRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(HyperRuleParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(HyperRuleParser.SEMI, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			statement();
			setState(25);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(21);
					match(SEMI);
					setState(22);
					statement();
					}
					} 
				}
				setState(27);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(28);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statements_blockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(HyperRuleParser.LBRACE, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(HyperRuleParser.RBRACE, 0); }
		public Statements_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitStatements_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statements_blockContext statements_block() throws RecognitionException {
		Statements_blockContext _localctx = new Statements_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(LBRACE);
			setState(31);
			statements();
			setState(32);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprStmtContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStmtContext extends StatementContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStmtContext extends StatementContext {
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public AssignStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(37);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				expression(0);
				}
				break;
			case 2:
				_localctx = new AssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				assign_statement();
				}
				break;
			case 3:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				if_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statementContext extends ParserRuleContext {
		public Assign_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_statement; }
	 
		public Assign_statementContext() { }
		public void copyFrom(Assign_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignLocalContext extends Assign_statementContext {
		public TerminalNode LOCAL_VAR() { return getToken(HyperRuleParser.LOCAL_VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(HyperRuleParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignLocalContext(Assign_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitAssignLocal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignRefContext extends Assign_statementContext {
		public TerminalNode REF_VAR() { return getToken(HyperRuleParser.REF_VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(HyperRuleParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignRefContext(Assign_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitAssignRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_statementContext assign_statement() throws RecognitionException {
		Assign_statementContext _localctx = new Assign_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assign_statement);
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOCAL_VAR:
				_localctx = new AssignLocalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				match(LOCAL_VAR);
				setState(40);
				match(ASSIGN);
				setState(41);
				expression(0);
				}
				break;
			case REF_VAR:
				_localctx = new AssignRefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				match(REF_VAR);
				setState(43);
				match(ASSIGN);
				setState(44);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(HyperRuleParser.IF, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(HyperRuleParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(HyperRuleParser.LPAREN, i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(HyperRuleParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(HyperRuleParser.RPAREN, i);
		}
		public List<Condition_branchContext> condition_branch() {
			return getRuleContexts(Condition_branchContext.class);
		}
		public Condition_branchContext condition_branch(int i) {
			return getRuleContext(Condition_branchContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(HyperRuleParser.ELSE, 0); }
		public List<TerminalNode> ELIF() { return getTokens(HyperRuleParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(HyperRuleParser.ELIF, i);
		}
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitIf_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(IF);
			setState(48);
			match(LPAREN);
			setState(49);
			condition();
			setState(50);
			match(RPAREN);
			setState(51);
			condition_branch();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(52);
				match(ELIF);
				setState(53);
				match(LPAREN);
				setState(54);
				condition();
				setState(55);
				match(RPAREN);
				setState(56);
				condition_branch();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(ELSE);
			setState(64);
			condition_branch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_branchContext extends ParserRuleContext {
		public Condition_branchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_branch; }
	 
		public Condition_branchContext() { }
		public void copyFrom(Condition_branchContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BranchStmtContext extends Condition_branchContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BranchStmtContext(Condition_branchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitBranchStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BranchBlockContext extends Condition_branchContext {
		public Statements_blockContext statements_block() {
			return getRuleContext(Statements_blockContext.class,0);
		}
		public BranchBlockContext(Condition_branchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitBranchBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_branchContext condition_branch() throws RecognitionException {
		Condition_branchContext _localctx = new Condition_branchContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition_branch);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_LITERAL:
			case FLOAT_LITERAL:
			case STRING_LITERAL:
			case BOOLEAN_LITERAL:
			case NULL_LITERAL:
			case SUM:
			case AVG:
			case SQRT:
			case LOG:
			case COUNT:
			case LEN:
			case MAX:
			case MIN:
			case SUBSTR:
			case TRIM:
			case IS_NUMBER:
			case IS_INT:
			case IS_NULL:
			case TO_STR:
			case TO_INT:
			case TO_FLOAT:
			case TO_DATE:
			case ADD_TO_DATE:
			case DATE_DIFF:
			case SYSDATE:
			case IF:
			case LOCAL_VAR:
			case REF_VAR:
			case SUB:
			case NOT:
			case LPAREN:
				_localctx = new BranchStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				statement();
				}
				break;
			case LBRACE:
				_localctx = new BranchBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				statements_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ADD() { return getToken(HyperRuleParser.ADD, 0); }
		public AddContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitAdd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Date_diffContext extends ExpressionContext {
		public TerminalNode DATE_DIFF() { return getToken(HyperRuleParser.DATE_DIFF, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public Date_diffContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitDate_diff(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(HyperRuleParser.OR, 0); }
		public OrContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MaxContext extends ExpressionContext {
		public TerminalNode MAX() { return getToken(HyperRuleParser.MAX, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public MaxContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitMax(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UminusContext extends ExpressionContext {
		public TerminalNode SUB() { return getToken(HyperRuleParser.SUB, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UminusContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitUminus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanLiteralContext extends ExpressionContext {
		public TerminalNode BOOLEAN_LITERAL() { return getToken(HyperRuleParser.BOOLEAN_LITERAL, 0); }
		public BooleanLiteralContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitBooleanLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Add_to_dateContext extends ExpressionContext {
		public TerminalNode ADD_TO_DATE() { return getToken(HyperRuleParser.ADD_TO_DATE, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public Add_to_dateContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitAdd_to_date(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CountContext extends ExpressionContext {
		public TerminalNode COUNT() { return getToken(HyperRuleParser.COUNT, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public CountContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitCount(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EQ() { return getToken(HyperRuleParser.EQ, 0); }
		public EqContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitEq(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class To_dateContext extends ExpressionContext {
		public TerminalNode TO_DATE() { return getToken(HyperRuleParser.TO_DATE, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public To_dateContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitTo_date(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GtContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GT() { return getToken(HyperRuleParser.GT, 0); }
		public GtContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitGt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Is_nullContext extends ExpressionContext {
		public TerminalNode IS_NULL() { return getToken(HyperRuleParser.IS_NULL, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public Is_nullContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitIs_null(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubstrContext extends ExpressionContext {
		public TerminalNode SUBSTR() { return getToken(HyperRuleParser.SUBSTR, 0); }
		public TerminalNode LPAREN() { return getToken(HyperRuleParser.LPAREN, 0); }
		public ParalistContext paralist() {
			return getRuleContext(ParalistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HyperRuleParser.RPAREN, 0); }
		public SubstrContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitSubstr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NeContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode NE() { return getToken(HyperRuleParser.NE, 0); }
		public NeContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HyperRuleVisitor ) return ((HyperRuleVisitor<? extends T>)visitor).visitNe(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RefVarContext extends ExpressionContext {
